Changes to keystore configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore/acme.p12
+server.ssl.key-store=classpath:saml/acme.p12
 server.ssl.key-store-password=secret
 server.ssl.key-alias=acme
 server.ssl.enabled=true
