--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,5 +24,5 @@ idp.metedata.url: # put your IDP metadata URL here
 saml:
   keystore.password: secret
   private.key:
-    alias: acmesignature
+    alias: acme
     password: secret
